--- a/README.Rmd
+++ b/README.Rmd
@@ -1,12 +1,10 @@
 ---
-title: stats19-private
-date: "`r Sys.Date()`"
+title: eAtlas
 output: github_document
 ---
-#eAtlas
 
 ![image](https://user-images.githubusercontent.com/408568/50227914-c5d07580-039e-11e9-9118-7b9a3d82669f.png)
-This is a geopumber app. Build 
+This is a [geopumber]("https://github.com/ATFutures/geoplumber") app. Build 
 ```{r, eval=FALSE}
 library(geoplumber)
 gp_build()
