Reflect release on plumber.R

--- a/refs.bib
+++ b/refs.bib
@@ -15,3 +15,13 @@ publisher={International Organization for Standardization},
 page={Part 11}, 
 location={Geneva}
 }
+@inproceedings{mwalongo2016state,
+  title={State-of-the-Art Report in Web-based Visualization},
+  author={Mwalongo, Finian and Krone, Michael and Reina, Guido and Ertl, Thomas},
+  booktitle={Computer graphics forum},
+  volume={35},
+  number={3},
+  pages={553--575},
+  year={2016},
+  organization={Wiley Online Library}
+}
