--- a/README.Rmd
+++ b/README.Rmd
@@ -52,3 +52,10 @@ docker run -d -p 8000:8001 --name eatlas eatlas
 <img width="100%" alt="eAtlas screen shot" src="https://user-images.githubusercontent.com/408568/61232570-8694b800-a726-11e9-9fd0-eb0baa523c87.gif">
 <img width="100%" alt="Screenshot gif" src="https://user-images.githubusercontent.com/408568/60017431-9f0e3700-9680-11e9-8ec5-2973883a1681.gif"/>
 <img width="100%" alt="eAtlas screen shot" src="https://user-images.githubusercontent.com/408568/61215554-2f312080-a703-11e9-9801-6fd744a7647d.png">
+
+## Current deployment
+The project has been given an Azure account from Turing. The deployment model is as follows for now:
+
+![eatlas-production](https://user-images.githubusercontent.com/408568/64242151-ede81080-cefc-11e9-8bcc-9657b3f2b2f3.png)
+
+Please let us know if you think of a better model.
