--- a/notes/guide.Rmd
+++ b/notes/guide.Rmd
@@ -9,18 +9,20 @@ output:
 ## Introduction
 Turing Geovisualization Engine (TGVe or eAtlas for short) is a decoupled JavaScript and R application that can be used as a complete server-client application or just as a front-end stand-alone application. This document outlines the different ways to use the eAtlas.
 
-The TGVE  is a web based interactive visual analytics tool built on modern web stack of technology. The visual views and interaction mechanisms designed into the tool is underpinned by empirically-informed guidelines around visual perception from cognitive science and the information visualization domain. Additionally, techniques from geographic information science (GIScience) and related domains is used to implement tech
+The TGVE  is a web based interactive visual analytics tool built on modern web stack of technology. The visual views and interaction mechanisms designed into the tool is underpinned by empirically-informed guidelines around visual perception from cognitive science and the information visualization domain. Additionally, techniques from geographic information science (GIScience) and related domains is used to implement techniques for automatic aggregation of temporal and spatial data.
 
-Current version of the eAtlas does not provide much customisation out of the box. However, it is in the planned work to provide configurations using easy to use techqniues. See [Roadmap](#Roadmap) section for details.
+Current version of the eAtlas does not provide much customisation out of the box. However, it is in the planned work to provide configurations using easy to use techqniues. See [Roadmap](#Roadmap) section for details. `<For detailed documentation/paper about eAtlas please see xyz>`
 
 ## Using GitHub pages
 
-1. Create repo from this template
+1. Create repo from this [template](https://github.com/layik/eatlas-template)
 <img width="100%" style="border:1px solid" alt="create repo from template" src="https://user-images.githubusercontent.com/408568/109291248-a8ba4b80-7820-11eb-9054-5b8fb6f38f82.png">
 
 2. Edit the data URL in gh-pages.yml with [URL](https://github.com/layik/eatlas-template/blob/main/.github/workflows/gh-pages.yml#L34) of your dataset. So replace `https://raw.githubusercontent.com/layik/eatlas-data/main/casualties.csv` with your data URL.
 3. Once first actions build is finished, a `gh-actions` is built, enable gh-pages by assigning branch `gh-pages` and `root` as the directorry as shown below:
 <img width="100%" style="border:1px solid" alt="setup github pages" src="https://user-images.githubusercontent.com/408568/109220743-39f1d980-77b1-11eb-9bd0-4b5e183854d5.png">
+
+Your new repository's github pages URL would be: `https://OWNER.github.io/NEW_REPO`. 
 
 What did we do?
 The repo you setup has a branch called `gh-pages` which github uses to serve. The "actions" in the template generates a production ready app which pulls data from the link added in step (2). The following screenshot shows a repo with owner "layik" and repository name "eAtlas". Your new instance will replace these two values with your repository obtained from GitHub APIs.
@@ -34,7 +36,7 @@ Examples of how this is done is the `eAtlas` repo itself, a project called Safer
 ## Using docker
 This is the method of using the full application. It means you can update the data served and also add your own backend connections, data workflows and more by leveraging the power of R langague.
 
-It also means you would need some knowledge of R to be able to write such data workflows. The `plumber` package (now owned by RStudio) is rather new and the stable release came out in 2020. The Dockerfile has gone through few versions and this should be expected as underlying libraries change and grow. 
+It also means you would need some knowledge of R to be able to write such data workflows. The [`plumber`](https://github.com/rstudio/plumber/) package (now owned by RStudio) is rather new and the stable release came out in [Sep 2020](https://github.com/rstudio/plumber/releases/tag/v1.0.0). The Dockerfile has gone through few versions and this should be expected as underlying libraries change and grow. 
 
 Currently the ready to use (with default dataset) images are hosted at.
 
@@ -98,14 +100,14 @@ To see SPENSER visit: [www.geospenser.com](https://geospenser.com)
 
 ## Roadmap
 
-Current version of the app has limited functionality. However, these are the major funcitonality that the eAtlas is hoped to have:
+Current version of the app has limited functionality. However, these are the major functionality that the eAtlas is hoped to have:
 
 * Multiple layers: Currently adding data replaces what is already in the application.
 
-* Configuration settings: changes variety of settings in the app should be possible via `yml`, `env` or some other way. This can also be sync'ed with browser cookies to make it easier for users/analysts. Currently in version 0.21 of the npm package the application supports limited settings, allows `defaultURL` to run the application.
+* Configuration settings: changes variety of settings in the app should be possible via `yml`, `env` or some other way. This can also be synced with browser cookies to make it easier for users/analysts. Currently in version 0.21 of the npm package the application supports limited settings, allows `defaultURL` to run the application.
 
-* Smarter filting: currently the filtering relies on matching key-value pairs, this can be extended to ranges and more. One other area of filtering is spatial filtering. The required packages/libraries are there and there is already a basic example of filtering "lines" implemented.
+* Smarter filtering: currently the filtering relies on matching key-value pairs, this can be extended to ranges and more. One other area of filtering is spatial filtering. The required packages/libraries are there and there is already a basic example of filtering "lines" implemented.
 
-* Basic data wrangling: one of the showcases "hard-coded" in the application does a simple conversion of seconds to minutes column to generate meaningful isochrones.
+* Basic data wrangling: one of the showcases "hard-coded" in the application does a simple conversion of seconds to minutes column to generate meaningful [isochrones](https://en.wikipedia.org/wiki/Isochrone_map).
 
 * Reconsider `geojson` as the central data format of the application.
