--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,5 @@
 ---
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: github_document
 ---
 # eAtlas · [![Node CI](https://github.com/layik/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/layik/eAtlas/actions?query=workflow%3A%22Node+CI%22)
@@ -7,13 +8,13 @@ This is the npm package from eAtlas project.
 
 Currently these variables can be passed to the eAtlas app: 
 
-* `data` which is expected to be a valid geojson object (json).
+* `data` valid geojson object.
 
-* `defaultURL` which is meant to returing a valide geojson object (json) when queried.
+* `defaultURL` which returns a valid geojson object when `fetched`. It can be used to fetch CSVs which is converted to `geojson` by eAtlas after fetching.
 
-* `geographyURL`, if provided and both on initialization and when `reset` button is pressed, data is fetched separately using this variable and `defaultURL` variables.
+* `geographyURL` which returns a valid `geojson` dataset. If this variable is provided, data is fetched separately along with `defaultURL`, eAtlas uses the `geographyColumn` to join them. eAtlas does this oth on initialization and when `reset` button is pressed.
 
-* `geographyColumn` a matching column between data return from `defaultURL` and `geographyURL`. This is the joining column that will result in dynamically generating `geojson` data for eAtlas to consume.
+* `geographyColumn` a column name which is shared between data return from `defaultURL` and `geographyURL`. This is the joining column that will result in dynamically generating `geojson` data for eAtlas to consume.
 
 * `column` if provided, and if the geometry is of particular type which would need a column, it would be used. Defaults on to the second column as often first column is an ID of sort.
 
@@ -24,7 +25,7 @@ See the main repo for more about the project.
 
 ## Using github pages
 
-See the main repo guide for more details but you can use a template ([`layik/eatlas-template`](https://github.com/layik/eatlas-template)) repo to publish your data using eAtlas. 
+See the main [repo guide](https://github.com/layik/eAtlas/blob/master/notes/guide.md) for more details but you can use a template ([`layik/eatlas-template`](https://github.com/layik/eatlas-template)) repo to publish your data using eAtlas. 
 
 ## Development
 See the main repo for more details but the package is a fork from a `create-react-app` boilerplate.
@@ -33,5 +34,6 @@ See the main repo for more details but the package is a fork from a `create-reac
 The package follows `create-react-app` testing kits and uses mainly `jest`. Run `npm run test`.
 
 ## Change log
-* support for separating data from geography.
-* minor improvements elsewhere
+* `1.1.0-beta.0`
+  * support for separating data from geography.
+  * minor improvements elsewhere
