--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,6 @@
 ---
 output:
-  github_document:
-    toc: true
-    toc_depth: 2
+  github_document
 ---
 # eAtlas &middot; [![Node CI](https://github.com/layik/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/layik/eAtlas/actions?query=workflow%3A%22Node+CI%22) [![Publish Docker image](https://github.com/layik/eAtlas/actions/workflows/docker.yml/badge.svg)](https://github.com/layik/eAtlas/actions/workflows/docker.yml) [![npm version](https://badge.fury.io/js/eatlas.svg)](https://badge.fury.io/js/eatlas)
 
@@ -38,14 +36,11 @@ library(geoplumber)
 gp_build()
 ```
 
-Before you run the app:
+To run the app using `geoplumber`, tha front-end is built using `geoplumber` and therefore:
 
-* you will need some preprocessed data, an RDS called "ac_joined_wy_2009-2017.Rds".
+* (optional) will be looking for a Mapbox API key, having obtained a Mapbox API key in `.env.local` file using variable name: `REACT_APP_MAPBOX_ACCESS_TOKEN = 'API_KEY'`
 
-* you will need a Mapbox API key (will see if we can remove this) in `.env.local` file using variable name:
-`REACT_APP_MAPBOX_ACCESS_TOKEN = 'API_KEY'`
-
-* in production its better to change the `PRD_URL` in the `Constants.js` file.
+* change the `PRD_URL` in the `Constants.js` file to `localhost:8000`. Default value is `https://layik.github.io/eAtlas` for this repo to publish on GitHub pages.
 
 Then you can run
 ```{r, eval=FALSE}
@@ -55,11 +50,9 @@ gp_plumb()
 
 visit `localhost:8000`
 
-or just run the front using (without any data loaded from local server): `npm i & npm start`
-
 ### Docker for production
 
-Repo contains Dockerfile for production. This is again WIP. 
+Repo contains Dockerfile for production. Again remember to change the production URL.
 
 ```{sh, eval= FALSE}
 # Dockerfile manages your npm/React build steps
@@ -69,6 +62,10 @@ docker build -t eatlas .
 docker run -d -p 8000:8001 --name eatlas eatlas
 ````
 Use your favourite document server (nginx for example) to proxy requets (more later hopefully).
+
+## Notes
+
+This README is valid for beta (`1.0.x-beta.x`) releases and updated with changes.
 
 ## Funding
 
