README and point to Wiki. Thanks to @griff-rees

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output:
 ---
 # eAtlas &middot; [![Node CI](https://github.com/layik/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/layik/eAtlas/actions?query=workflow%3A%22Node+CI%22) [![Publish Docker image](https://github.com/layik/eAtlas/actions/workflows/docker.yml/badge.svg)](https://github.com/layik/eAtlas/actions/workflows/docker.yml) [![npm version](https://badge.fury.io/js/eatlas.svg)](https://badge.fury.io/js/eatlas)
 
-The The Turing Geovisualisation Engine (TGVE or eAtlas) is a web-based, interactive visual analytics tool for geospatial data analysis, built using R & React. The visual views and interaction mechanisms designed into the tool is underpinned by empirically-informed guidelines around visualization design and techniques from Geographic Information Science (GIScience). 
+The Turing Geovisualisation Engine (TGVE or eAtlas) is a web-based, interactive visual analytics tool for geospatial data analysis, built using R & React. The visual views and interaction mechanisms designed into the tool is underpinned by empirically-informed guidelines around visualization design and techniques from Geographic Information Science (GIScience). 
 
 There are some [notes](https://github.com/layik/eAtlas/blob/master/notes/project_planning.md) to read. These are thoughts and background reading material as we take steps towards understanding what an "interdependent" eAtlas might be. Would it be "Turing Geovisualization Engine"?
 
@@ -14,7 +14,9 @@ There are some [notes](https://github.com/layik/eAtlas/blob/master/notes/project
 Current release is in beta for testing of the limited functionality and API offered by the codebase. Just like this source code, for now the package is released under `layik`'s account. 
 
 ### Github Template repo
-Please see the [guide document](https://github.com/layik/eAtlas/blob/master/notes/guide.md) for details of how to host your own eAtlas using Github Pages.
+
+Please see the repository's [wiki](https://github.com/layik/eAtlas/wiki/Using-TGVE)
+for details of how to host your own eAtlas using Github Pages, or other ways of using TGVE.
 
 ### Development
 To run the front end only without needs for the backend, having cloned the repo:
@@ -25,7 +27,7 @@ npm i # or yarn
 npm start
 ```
 
-The frontend is a [`create-react-app`](https://create-react-app.dev/docs/getting-started/) (CRA) so all the standard commands of CRA appliees.
+The frontend is a [`create-react-app`](https://create-react-app.dev/docs/getting-started/) (CRA) so all the standard commands of CRA applies.
 
 ### R 
 The whole application is a [geopumber](https://github.com/ATFutures/geoplumber) app. That means it is an R powered backend API (think Flask in Python) and a ReactJS front end.
@@ -52,7 +54,7 @@ visit `localhost:8000`
 
 ### Docker for production
 
-Repo contains Dockerfile for production. Again remember to change the production URL.
+This repository contains a Dockerfile for production. If you just want to pull the image, it is built on [hub.docker.com](https://hub.docker.com/r/layik/eatlas), if you just want to run the image. If you like to build it yourself, see below. Again remember to change the production URL and hopefully better documentations in future.
 
 ```{sh, eval= FALSE}
 # Dockerfile manages your npm/React build steps
