--- a/notes/reproducible.Rmd
+++ b/notes/reproducible.Rmd
@@ -4,6 +4,24 @@ output:
   github_document
 ---
 
+```{r setup, echo=FALSE}
+# save the built-in output hook
+hook_output <- knitr::knit_hooks$get("output")
+
+# set a new output hook to truncate text output
+knitr::knit_hooks$set(output = function(x, options) {
+  if (!is.null(n <- options$out.lines)) {
+    x <- xfun::split_lines(x)
+    if (length(x) > n) {
+      # truncate the output
+      x <- c(head(x, n/2), '....', tail(x, n/2 + 1))
+    }
+    x <- paste(x, collapse = "\n")
+  }
+  hook_output(x, options)
+})
+```
+
 As documented elsewhere, TGVE is a `geoplumber` application and therefore there is a particular directory structure to it. That is R at the backend based on `plumber` APIs and fronted being a CRA app.
 
 This document shows how TGVE is a fully reproducible using R code. This markdown document itself is prodcued using Rmarkdown companion document.
@@ -58,7 +76,16 @@ As we can see from the output of the R chunk, we do the following:
 4. Do some extra checks on the app.
 
 ## Front-end
-coming ...
+
+We can follow standard CRA app commands, though eAtlas repository may have slightly different `scripts` defined. The `geoplumber` commands (functions) related to the front-end also should work as shown below:
+```{r, out.lines=4}
+od <- setwd(d)
+stopifnot(gp_is_wd_geoplumber())
+# npm run build
+# or
+gp_build()
+```
+
 
 
 
