--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,7 @@
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: github_document
 ---
-# TGVE · [![Node CI](https://github.com/layik/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/tgve/tgve/actions?query=workflow%3A%22Node+CI%22)
+# TGVE · [![Node CI](https://github.com/tgve/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/tgve/tgve/actions?query=workflow%3A%22Node+CI%22)
 
 This is the npm package output of TGVE (eAtlas) project.
 
@@ -30,6 +30,10 @@ Currently these variables can be passed to the eAtlas app, each can be passed as
 
   - `layerName` if provided, and if the given name is in the list of DeckGL layers supported by eAtlas, will be passed to generate the layer with the name given.
 
+  - `dark` by default `baseui/baseweb` is set to dark, you can change the theme to other (e.g. light)
+
+  - `leftSidebarContent` is based on React standard children. This is where users can add their own UI and more, though this requires competent React concepts. A simple use would be to pass plain text description of data/project etc. Please see TGVE documentations.
+
 None of the above is necessary and in the current release “Add data”
 button will allow loading data into eAtlas.
 
@@ -38,9 +42,9 @@ See the main repo for more about the project.
 ## Using github pages
 
 See the main [repo
-guide](https://github.com/layik/eAtlas/blob/master/notes/guide.md) for
+guide](https://github.com/tgve/eAtlas/blob/master/notes/guide.md) for
 more details but you can use a template
-([`layik/eatlas-template`](https://github.com/layik/eatlas-template))
+([`tgve/eatlas-template`](https://github.com/tgve/eatlas-template))
 repo to publish your data using eAtlas.
 
 ## Development
@@ -54,7 +58,11 @@ The package follows `create-react-app` testing kits and uses mainly
 `jest`. Run `npm run test`.
 
 ## Change log
-
+- `1.3.1-beta.0`
+  - Preparing to remove the `beta` tag. 
+  - TGVE has now been migrated to its organisation on github.com
+  - Added two new API variables (`dark`, `leftSidebarContent`)
+  - Lots of improvements and minor fixes
 - `1.3.0-beta.2`
   - Minor fix for initial analysis of data column name.
 - `1.1.0-beta.0`
