--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,9 @@ output: github_document
 
 This is the npm package output of TGVE (eAtlas) project.
 
-Currently these variables can be passed to the eAtlas app, each can be passed as an environment variable like `REACT_APP_LAYER_NAME` or when using eAtlas as a component `<Eatlas layerName="geojson">`:
+Currently these variables can be passed to the eAtlas app, each (except objects) can be passed as an environment variable like `REACT_APP_LAYER_NAME` or when using eAtlas as a component `<Eatlas layerName="geojson">`. The exception is that `leftSidebarContent` cannot be passed as an environment variable. For more on passing variables to a React app and the prefix of `REACT_App_` please see React docs [here](https://create-react-app.dev/docs/adding-custom-environment-variables). 
+
+As of version `1.3.4-beta.1` these API variables can be passed to TGVE:
 
   - `data`: valid geojson object. If a valid GeoJSON object is provided both `defaultURL` and `geographyURL` will be ignored, which also means `geographyColumn` would be ignored, too.
 
