--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,7 @@
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: github_document
 ---
-# TGVE · [![Node CI](https://github.com/tgve/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/tgve/tgve/actions?query=workflow%3A%22Node+CI%22)
+# TGVE · [![Node CI](https://github.com/tgve/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/tgve/tgve/actions?query=workflow%3A%22Node+CI%22) [![npm version](https://badge.fury.io/js/eatlas.svg)](https://badge.fury.io/js/eatlas)
 
 This is the npm package output of TGVE (eAtlas) project.
 
