--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output: github_document
 ---
 # TGVE · [![Node CI](https://github.com/tgve/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/tgve/tgve/actions?query=workflow%3A%22Node+CI%22) [![npm version](https://badge.fury.io/js/eatlas.svg)](https://badge.fury.io/js/eatlas)
 
-This is the npm package output of TGVE (eAtlas) project.
+This is a React Component ES Module that can be embedded in your React applications. This is an npm package output of TGVE (eAtlas) project.
 
 Currently these variables can be passed to the eAtlas app, each (except objects) can be passed as an environment variable like `REACT_APP_LAYER_NAME` or when using eAtlas as a component `<Eatlas layerName="geojson">`. The exception is that `leftSidebarContent` cannot be passed as an environment variable. For more on passing variables to a React app and the prefix of `REACT_App_` please see React docs [here](https://create-react-app.dev/docs/adding-custom-environment-variables). 
 
