--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,9 @@ output: github_document
 
 This is a React Component ES Module that can be embedded in your React applications. This is an npm package output of TGVE (eAtlas) project.
 
-Currently these variables can be passed to the eAtlas app, each (except objects) can be passed as an environment variable like `REACT_APP_LAYER_NAME` or when using eAtlas as a component `<Eatlas layerName="geojson">`. The exception is that `leftSidebarContent` cannot be passed as an environment variable. For more on passing variables to a React app and the prefix of `REACT_App_` please see React docs [here](https://create-react-app.dev/docs/adding-custom-environment-variables). 
+Currently these variables can be passed to the eAtlas app, each (except objects) can be passed as an environment variable like `REACT_APP_LAYER_NAME` or when using eAtlas as a component `<Eatlas layerName="geojson">`. As of version `1.3.5-beta.0`, they can also be passed to the TGVE as URL query parameters. For instance `localhost:3000?dark=false`.
+
+The exception is that `leftSidebarContent` cannot be passed as an environment variable. For more on passing variables to a React app and the prefix of `REACT_App_` please see React docs [here](https://create-react-app.dev/docs/adding-custom-environment-variables). 
 
 As of version `1.3.4-beta.1` these API variables can be passed to TGVE:
 
@@ -64,6 +66,8 @@ The package follows `create-react-app` testing kits and uses mainly
 `jest`. Run `npm run test`.
 
 ## Change log
+- `1.3.5-beta.0`
+  - The TGVE now accepts the API variables as URL query parameters.
 - `1.3.4.beta.4`
   - Minor issues and post tgver package Tests
   - Path layer API in
