--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,9 @@ output:
 ---
 # eAtlas &middot; [![Node CI](https://github.com/layik/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/layik/eAtlas/actions?query=workflow%3A%22Node+CI%22) [![Publish Docker image](https://github.com/layik/eAtlas/actions/workflows/docker.yml/badge.svg)](https://github.com/layik/eAtlas/actions/workflows/docker.yml) [![npm version](https://badge.fury.io/js/eatlas.svg)](https://badge.fury.io/js/eatlas)
 
+<!--This RMD might be behind current M
+-->
+
 The Turing Geovisualisation Engine (TGVE or eAtlas) is a web-based, interactive visual analytics tool for geospatial data analysis, built using R & React. The visual views and interaction mechanisms designed into the tool is underpinned by empirically-informed guidelines around visualization design and techniques from Geographic Information Science (GIScience). 
 
 ## Using eAtlas
@@ -34,7 +37,6 @@ To build the frontend, from an R console:
 library(geoplumber)
 gp_build()
 ```
-
 To run the app using `geoplumber`, tha front-end is built using `geoplumber` and therefore:
 
 * (optional) TGVE will be looking for a Mapbox API key, having obtained a Mapbox API key in `.env.local` file using variable name: `REACT_APP_MAPBOX_ACCESS_TOKEN = 'API_KEY'`. This is based on `react-map-gl` dependency, please see this [documentation](https://github.com/visgl/react-map-gl/blob/master/docs/get-started/mapbox-tokens.md) for more.
