--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,8 @@ output: github_document
 ---
 # TGVE · [![Node CI](https://github.com/tgve/eAtlas/workflows/Node%20CI/badge.svg?branch=master)](https://github.com/tgve/tgve/actions?query=workflow%3A%22Node+CI%22) [![npm version](https://badge.fury.io/js/eatlas.svg)](https://badge.fury.io/js/eatlas)
 
+<!-- to build this document on a machine with R, just go `R -e "rmarkdown::render('README.Rmd')"` -->
+
 This is a React Component ES Module that can be embedded in your React applications. This is an npm package output of TGVE (eAtlas) project.
 
 Currently these variables can be passed to the eAtlas app, each (except objects) can be passed as an environment variable like `REACT_APP_LAYER_NAME` or when using eAtlas as a component `<Eatlas layerName="geojson">`. As of version `1.3.5-beta.0`, they can also be passed to the TGVE as URL query parameters. For instance `localhost:3000?dark=false`.
