--- a/notes/REG-collab/meetings/2022-01-07.md
+++ b/notes/REG-collab/meetings/2022-01-07.md
@@ -1,5 +1,7 @@
 # TGVE/REG meeting 7 Jan 2022
 
+Present: Nik, Roger, Layik, Lydia, Nick, Roly
+
 ## Misc
 
 - full access to repo/GitHub org
@@ -10,7 +12,7 @@
 - R/JavaScript integration
 - Docker publishing step
 - single app or app framework?
-  - single app? 
+  - single app?
   - custom UI
 - examples of apps (qv. template repos)
   - spenser (custom fork of TGVE)
