--- a/notes/REG-collab/meetings/2022-01-13.md
+++ b/notes/REG-collab/meetings/2022-01-13.md
@@ -1,5 +1,7 @@
 # TGVE/REG meeting 7 Jan 2022
 
+Present: Nik, Roger, Layik, Lydia, Roly
+
 ## Project questions
 
 - how does TGVE compare to Kepler?
