Start on notes for tomorrow's meeting.

--- a/notes/REG-collab/meetings/2022-01-17.md
+++ b/notes/REG-collab/meetings/2022-01-17.md
@@ -1,9 +1,9 @@
+# TGVE/REG meeting 17 Jan 2022
 
-Present: Layik, Lydia, Nick, Roly
+Present: Layik, Roly
 
 ## Dev questions
 
-- what is the divergence between `master` and `npm` and how to resolve?
 - what is the development workflow on the `npm` branch? (instructions for `master` don't work)
   - `docker build` can't find `webpack/lib/node/NodeTemplatePlugin`
   - `yarn start` can't find `index.html`
